CHATS_SIT/force-app/main/default/objects/T_ADJMT_RESPBL_PARTY__c.object
<CustomObject>
    <description>Entity/caretaker responsible for the repayment of a debt incurred as a result of payment correction</description>
   <!--<enableChangeDataCapture>false</enableChangeDataCapture>--> 
     <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Name__c</fullName>
        <description>The field is used to store the Responsible Party NAME.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible Party Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPV_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IPV_Info</description>
        <label>IPV Info</label>
        <referenceTo>IPV_Information__c</referenceTo>
        <relationshipLabel>Adjustment Responsible Parties</relationshipLabel>
        <relationshipName>Adjustment_Responsible_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjustment</description>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Adjustent5</relationshipLabel>
        <relationshipName>Adjustent5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case</description>
        <label>Case</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Adjustment Responsible Party</relationshipLabel>
        <relationshipName>Case12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual</description>
        <label>Individual</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Individual</relationshipLabel>
        <relationshipName>Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Adjustment Responsible Parties</relationshipLabel>
        <relationshipName>Adjustment_Responsible_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Adjustment Responsible Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Responsible Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_parent_record_type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT(ISNULL(IDN_ADJMT__c)),
 NOT(ISNEW()),
 IDN_ADJMT__r.RecordType.Name == &apos;Finalized&apos;,
 NOT(ISPICKVAL(IDN_ADJMT__r.CDE_STATUS_ADJMT__c, &apos;2&apos;))
)</errorConditionFormula>
        <errorMessage>You cannot update this record as the associated Adjustment is Finalized</errorMessage>
    </validationRules>
</CustomObject>